# rinha-backend-2024-Q1

./: Dockerfile  docker-compose.yml  environment.yml  executar-teste-local.sh  nginx.conf  pyproject.toml  requirements.txt  script.sql  sql_app.db
.github/workflows/: ci.yml
backend/: main.py  schemas.py
backend/sql_app/: crud.py  database.py  models.py
main/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
main/js/: all_sessions.js  global_stats.json  stats.js  stats.json
